# traccc

./: .gitignore  01_build.sh  03_nc_report  04_iterate_maxrregs.sh  05_diff_baseline.sh
cmake/: traccc-compiler-options-cuda.cmake
core/: CMakeLists.txt
core/include/traccc/definitions/: math.hpp  qualifiers.hpp
core/include/traccc/fitting/: fitting_config.hpp
core/include/traccc/fitting/details/: fit_tracks.hpp
core/include/traccc/fitting/kalman_filter/: gain_matrix_updater.hpp  kalman_fitter.hpp  kalman_gru_gain_predictor.hpp  kalman_gru_trained_weights.hpp  kalman_int8_gru_gain_predictor.hpp  kalman_int8_gru_gain_predictor_weights.empty.hpp  kalman_int8_gru_gain_predictor_weights.hpp  kalman_int8_gru_gain_weights.hpp  kalman_int8_gru_trained_weights.hpp  kalman_int8_gru_weights.hpp  two_filters_smoother.hpp
core/include/traccc/utils/: format.hpp  gauss_jordan_inverse.hpp  gru_training_logger.hpp  matrix_inline_ops.hpp  subspace.hpp
core/src/utils/: gru_training_logger.cpp
data/: kalmannet.pt
device/alpaka/src/finding/: finding_algorithm.cpp
device/alpaka/src/fitting/: fitting_algorithm.cpp
device/common/include/traccc/clusterization/device/impl/: ccl_kernel.ipp
device/common/include/traccc/finding/device/: propagate_to_next_surface.hpp
device/common/include/traccc/finding/device/impl/: propagate_to_next_surface.ipp
device/common/include/traccc/fitting/device/: fit.hpp  soa_types.hpp
device/common/include/traccc/fitting/device/impl/: fit.ipp
device/common/include/traccc/utils/: view_traits.hpp
device/cuda/: CMakeLists.txt
device/cuda/include/traccc/cuda/utils/: make_prefix_sum_buff.hpp  tiled_matmul.cuh  wmma_matrix_multiply.hpp
device/cuda/src/clusterization/: clusterization_algorithm.cu
device/cuda/src/clusterization/kernels/: ccl_kernel.cu  ccl_kernel.cuh  kernel_config.cu  kernel_config.cuh
device/cuda/src/finding/: finding_algorithm.cu
device/cuda/src/finding/kernels/: apply_interaction.cuh  build_tracks.cu  build_tracks.cuh  find_tracks.cuh  kernel_config.cu  kernel_config.cuh  propagate_stage1.cuh  propagate_to_next_surface.cuh
device/cuda/src/finding/kernels/specializations/: apply_interaction_default_detector.cu  apply_interaction_src.cuh  find_tracks_default_detector.cu  find_tracks_src.cuh  propagate_to_next_surface_default_detector.cu  propagate_to_next_surface_src.cuh
device/cuda/src/fitting/: fitting_algorithm.cu  kernel_config.cu  kernel_config.cuh
device/cuda/src/fitting/kernels/: kernel_config.cu  kernel_config.cuh
device/cuda/src/seeding/: kernel_config.cu  kernel_config.cuh  seed_finding.cu
device/cuda/src/utils/: make_prefix_sum_buff.cu
device/sycl/src/finding/: find_tracks.hpp
device/sycl/src/fitting/: fit_tracks.hpp
examples/options/src/: accelerator.cpp  detector.cpp  input_data.cpp  performance.cpp  throughput.cpp  track_fitting.cpp  track_propagation.cpp  track_resolution.cpp  truth_finding.cpp
extras/mlp_gain_training/: README.md  data_analysis.py  data_preprocess.py  dump_weights.py  export.pl  extract_int8_weights.py  extract_qparams.py  find_max.py  gru_training_data.csv  gru_training_data_stats.csv  hyperparam_search.sh  rm_duplicate_csv.py  run.sh  train_mlp_gain.py
extras/mlp_gain_training/model_out/: metrics.json  model_fp32.pth  model_int8.pt  qparams.txt
extras/mlp_gain_training/model_out/readable/: fc1_bias.txt  fc1_int8_weight.txt  fc2_bias.txt  fc2_int8_weight.txt  fc3_bias.txt  fc3_int8_weight.txt  qparams.txt
nc_report/v1_3_0/: nc_report.csv
nc_report/v1_4_0/: nc_report.csv
scripts/: export_weights.py  generate_dataset.py  run_full_pipeline.sh  train_mlp.py
tests/cuda/: cuda_main.cpp
